[gd_scene load_steps=9 format=3 uid="uid://1v478tw1xxxq"]

[ext_resource type="Script" uid="uid://cwg14n7y6mmps" path="res://caculator.gd" id="1_oshx1"]
[ext_resource type="Texture2D" uid="uid://j05jutapuu8u" path="res://Grafiki/Arrow.png" id="2_bxk3p"]
[ext_resource type="Texture2D" uid="uid://cshsbelvnly8r" path="res://Grafiki/background_med.png" id="2_ndehy"]
[ext_resource type="FontFile" uid="uid://bmii1211yxrl3" path="res://Grafiki/MedievalSharp-Regular.ttf" id="2_t2m5p"]
[ext_resource type="Texture2D" uid="uid://bhwqf36jkv57l" path="res://kalkulator chłopa.png" id="3_p5xce"]
[ext_resource type="Theme" uid="uid://bsg8uqpbqn2na" path="res://Grafiki/button.tres" id="4_yjxe0"]
[ext_resource type="Theme" uid="uid://bw7ilf5hfndtk" path="res://Grafiki/home_button.tres" id="4_yxw67"]

[sub_resource type="LabelSettings" id="LabelSettings_whxml"]
font_size = 24
font_color = Color(0, 0, 0, 1)

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_oshx1")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.882353, 0.952941, 0.768627, 1)

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_ndehy")
expand_mode = 1
stretch_mode = 6

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TextureRect2" type="TextureRect" parent="VBoxContainer"]
layout_mode = 2
texture = ExtResource("3_p5xce")
expand_mode = 5
stretch_mode = 6

[node name="OptionButtonFrom" type="OptionButton" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource("4_yjxe0")
theme_override_constants/outline_size = 8
theme_override_fonts/font = ExtResource("2_t2m5p")
theme_override_font_sizes/font_size = 120
alignment = 1
selected = 1
item_count = 8
popup/item_0/text = "Krowy"
popup/item_0/id = 0
popup/item_1/text = "Kury"
popup/item_1/id = 1
popup/item_2/text = "Świnie"
popup/item_2/id = 2
popup/item_3/text = "Owce"
popup/item_3/id = 3
popup/item_4/text = "Kozy"
popup/item_4/id = 4
popup/item_5/text = "Konie"
popup/item_5/id = 5
popup/item_6/text = "Kaczki"
popup/item_6/id = 6
popup/item_7/text = "Kobieta"
popup/item_7/id = 7

[node name="LineEdit2" type="LineEdit" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/outline_size = 8
theme_override_fonts/font = ExtResource("2_t2m5p")
theme_override_font_sizes/font_size = 120
placeholder_text = "Ilość"
alignment = 1

[node name="TextureRect" type="TextureRect" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
texture = ExtResource("2_bxk3p")
expand_mode = 1

[node name="OptionButtonTo" type="OptionButton" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource("4_yjxe0")
theme_override_constants/outline_size = 8
theme_override_fonts/font = ExtResource("2_t2m5p")
theme_override_font_sizes/font_size = 120
alignment = 1
selected = 1
item_count = 8
popup/item_0/text = "Krowy"
popup/item_0/id = 0
popup/item_1/text = "Kury"
popup/item_1/id = 1
popup/item_2/text = "Świnie"
popup/item_2/id = 2
popup/item_3/text = "Owce"
popup/item_3/id = 3
popup/item_4/text = "Kozy"
popup/item_4/id = 4
popup/item_5/text = "Konie"
popup/item_5/id = 5
popup/item_6/text = "Kaczki"
popup/item_6/id = 6
popup/item_7/text = "Kobieta"
popup/item_7/id = 7

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 6
text = "
"
label_settings = SubResource("LabelSettings_whxml")
horizontal_alignment = 1

[node name="Button" type="Button" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -64.0
offset_right = 69.0
grow_vertical = 0
size_flags_vertical = 3
theme = ExtResource("4_yxw67")

[connection signal="item_selected" from="VBoxContainer/OptionButtonFrom" to="." method="_on_option_button_from_item_selected"]
[connection signal="item_selected" from="VBoxContainer/OptionButtonTo" to="." method="_on_option_button_to_item_selected"]
[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
